Added tiebreakers tables and fixed some bugs

--- a/public/styles.css
+++ b/public/styles.css
@@ -554,20 +554,24 @@ video {
   --tw-contain-style:  ;
 }
 
-.absolute {
-  position: absolute;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
 .mb-5 {
   margin-bottom: 1.25rem;
 }
 
+.mb-\[26px\] {
+  margin-bottom: 26px;
+}
+
 .mb-\[60px\] {
   margin-bottom: 60px;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-auto {
+  margin-top: auto;
 }
 
 .flex {
@@ -624,6 +628,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-8 {
+  width: 2rem;
 }
 
 .flex-col {
@@ -695,6 +703,10 @@ video {
   text-align: left;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .text-right {
   text-align: right;
 }
@@ -750,6 +762,12 @@ video {
 .\[text-align-last\:end\] {
   -moz-text-align-last: end;
        text-align-last: end;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 @media not all and (min-width: 1000px) {
