--- a/public/styles.css
+++ b/public/styles.css
@@ -606,8 +606,8 @@ video {
   height: 100%;
 }
 
-.w-6 {
-  width: 1.5rem;
+.w-8 {
+  width: 2rem;
 }
 
 .w-\[110px\] {
@@ -628,10 +628,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-8 {
-  width: 2rem;
 }
 
 .flex-col {
@@ -764,10 +760,13 @@ video {
        text-align-last: end;
 }
 
-body {
+body, html, #app {
+  height: 100%;
+}
+
+#app {
   display: flex;
   flex-direction: column;
-  height: 100%;
 }
 
 @media not all and (min-width: 1000px) {
