--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,11 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
-body {
+body, html, #app {
+  height: 100%;
+}
+
+#app {
   display: flex;
   flex-direction: column;
-  height: 100%;
 }
